[package]
name = "page-cache"
version = "0.1.0"
authors = ["Song Shaowei <songshaowei.ssw@antgroup.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["libc", "lru/default"]
sgx = ["sgx_types", "sgx_tstd", "sgx_trts", "sgx_libc", "async-io/sgx", "async-rt/sgx", "lru/sgx"]

[dependencies]
async-trait = "0.1.52"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
libc = { version = "0.2", optional = true }
log = "0.4"
lru = { path = "../../../../deps/lru-rs", default-features = false }
spin = "0.9.4"

async-io = { path = "../async-io" }
async-rt = { path = "../async-rt" }
block-device = { path = "../block-device" }
errno = { path = "../errno" }
object-id = { path = "../object-id" }

sgx_types = { path = "../../../../deps/rust-sgx-sdk/sgx_types", optional = true }
sgx_tstd = { path = "../../../../deps/rust-sgx-sdk/sgx_tstd", optional = true, features = ["backtrace"] }
sgx_trts = { path = "../../../../deps/rust-sgx-sdk/sgx_trts", optional = true }
sgx_libc = { path = "../../../../deps/rust-sgx-sdk/sgx_libc", optional = true }

[dev-dependencies]
async-rt = { path = "../async-rt", features = ["auto_run"] }

[lib]
doctest = false
