[package]
name = "sgx-disk"
version = "0.1.0"
authors = ["Tate, Hongliang Tian <tate.thl@antgroup.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["libc", "sgx-untrusted-alloc/default", "errno/std"]
sgx = ["errno/sgx", "sgx_types", "sgx_tstd", "sgx_trts", "sgx_libc", "sgx_tcrypto", "io-uring-callback/sgx", "sgx-untrusted-alloc/sgx"]

[dependencies]
block-device = { path = "../block-device" }
cfg-if = "1.0"
errno = { path = "../errno" }
log = { version = "0.4" }
io-uring-callback = { path = "../io-uring-callback" }
libc = { version = "0.2", optional = true }
new-self-ref-arc = { path = "../new-self-ref-arc" }
sgx-untrusted-alloc = { path = "../sgx-untrusted-alloc", default-features = false  }
sgx_types = { path = "../../../../deps/rust-sgx-sdk/sgx_types", optional = true }
sgx_tstd = { path = "../../../../deps/rust-sgx-sdk/sgx_tstd", optional = true, features = ["backtrace"] }
sgx_trts = { path = "../../../../deps/rust-sgx-sdk/sgx_trts", optional = true }
sgx_libc = { path = "../../../../deps/rust-sgx-sdk/sgx_libc", optional = true }
sgx_tcrypto = { path = "../../../../deps/rust-sgx-sdk/sgx_tcrypto", optional = true }

[dev-dependencies]
async-trait = "0.1.52"
async-rt = { path = "../async-rt", features = ["auto_run"] }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }

[[bench]]
name = "disk_bench"
harness = false